parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> mat
Rule 1     mat -> element mat
Rule 2     mat -> <empty>
Rule 3     element -> compoundstmt
Rule 4     element -> FUNCTION IDENTIFIER EQUAL IDENTIFIER LPAREN optargs RPAREN compoundstmt END
Rule 5     compoundstmt -> stmt SEMICOLON compoundstmt
Rule 6     compoundstmt -> stmt compoundstmt
Rule 7     compoundstmt -> COMMENT compoundstmt
Rule 8     compoundstmt -> <empty>
Rule 9     stmt -> IF exp compoundstmt END
Rule 10    stmt -> IF exp compoundstmt ELSE compoundstmt END
Rule 11    stmt -> SWITCH exp multiclause END
Rule 12    stmt -> TRY compoundstmt multiclause END
Rule 13    stmt -> FOR range compoundstmt END
Rule 14    stmt -> WHILE exp compoundstmt END
Rule 15    stmt -> IDENTIFIER EQUAL exp
Rule 16    stmt -> matrix EQUAL exp
Rule 17    stmt -> RETURN exp
Rule 18    stmt -> keycall
Rule 19    stmt -> IDENTIFIER PERIOD IDENTIFIER
Rule 20    stmt -> exp
Rule 21    multiclause -> clause multiclause
Rule 22    multiclause -> <empty>
Rule 23    clause -> CASE exp compoundstmt
Rule 24    clause -> OTHERWISE compoundstmt
Rule 25    clause -> CATCH IDENTIFIER compoundstmt
Rule 26    clause -> CATCH compoundstmt
Rule 27    range -> IDENTIFIER EQUAL exp COLON exp
Rule 28    range -> IDENTIFIER EQUAL exp COLON exp COLON exp
Rule 29    keycall -> CLC
Rule 30    keycall -> CLOSE optvars
Rule 31    keycall -> CLEAR optvars
Rule 32    keycall -> BREAK
Rule 33    keycall -> CONTINUE
Rule 34    optvars -> exp optvars
Rule 35    optvars -> exp
Rule 36    number -> INTEGER
Rule 37    number -> FLOAT
Rule 38    exp -> IDENTIFIER
Rule 39    exp -> STRING
Rule 40    exp -> DIRECTORY
Rule 41    exp -> exp TRANSPOSE
Rule 42    exp -> LPAREN exp RPAREN
Rule 43    exp -> IDENTIFIER LPAREN optargs RPAREN
Rule 44    exp -> number
Rule 45    exp -> keyword
Rule 46    keyword -> ALL
Rule 47    keyword -> NOT
Rule 48    keyword -> TRUE
Rule 49    keyword -> FALSE
Rule 50    keyword -> COLON
Rule 51    optargs -> args
Rule 52    optargs -> <empty>
Rule 53    args -> exp COMMA args
Rule 54    args -> exp
Rule 55    exp -> exp ELOR exp
Rule 56    exp -> exp ELAND exp
Rule 57    exp -> exp OROR exp
Rule 58    exp -> exp ANDAND exp
Rule 59    exp -> exp EQUALEQUAL exp
Rule 60    exp -> exp NOTEQUAL exp
Rule 61    exp -> exp LT exp
Rule 62    exp -> exp GT exp
Rule 63    exp -> exp LE exp
Rule 64    exp -> exp GE exp
Rule 65    exp -> exp MPOWER exp
Rule 66    exp -> exp POWER exp
Rule 67    exp -> exp MTIMES exp
Rule 68    exp -> exp MDIVIDE exp
Rule 69    exp -> exp TIMES exp
Rule 70    exp -> exp DIVIDE exp
Rule 71    exp -> exp BACKSLASH exp
Rule 72    exp -> exp PLUS exp
Rule 73    exp -> exp MINUS exp
Rule 74    exp -> exp COLON exp COLON exp
Rule 75    exp -> exp COLON exp
Rule 76    exp -> matrix
Rule 77    matrix -> LBRACKET explist RBRACKET
Rule 78    explist -> exp
Rule 79    explist -> explist exp
Rule 80    explist -> explist COMMA exp
Rule 81    explist -> explist SEMICOLON explist
Rule 82    exp -> IDENTIFIER LBRACE args RBRACE

Terminals, with rules where they appear

ALL                  : 46
ANDAND               : 58
BACKSLASH            : 71
BREAK                : 32
CASE                 : 23
CATCH                : 25 26
CLC                  : 29
CLEAR                : 31
CLOSE                : 30
COLON                : 27 28 28 50 74 74 75
COMMA                : 53 80
COMMENT              : 7
CONTINUE             : 33
DIRECTORY            : 40
DIVIDE               : 70
ELAND                : 56
ELOR                 : 55
ELSE                 : 10
END                  : 4 9 10 11 12 13 14
EQUAL                : 4 15 16 27 28
EQUALEQUAL           : 59
FALSE                : 49
FLOAT                : 37
FOR                  : 13
FUNCTION             : 4
GE                   : 64
GT                   : 62
IDENTIFIER           : 4 4 15 19 19 25 27 28 38 43 82
IF                   : 9 10
INTEGER              : 36
LBRACE               : 82
LBRACKET             : 77
LE                   : 63
LPAREN               : 4 42 43
LT                   : 61
MDIVIDE              : 68
MINUS                : 73
MPOWER               : 65
MTIMES               : 67
NOT                  : 47
NOTEQUAL             : 60
OROR                 : 57
OTHERWISE            : 24
PERIOD               : 19
PLUS                 : 72
POWER                : 66
RBRACE               : 82
RBRACKET             : 77
RETURN               : 17
RPAREN               : 4 42 43
SEMICOLON            : 5 81
STRING               : 39
SWITCH               : 11
TIMES                : 69
TRANSPOSE            : 41
TRUE                 : 48
TRY                  : 12
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

args                 : 51 53 82
clause               : 21
compoundstmt         : 3 4 5 6 7 9 10 10 12 13 14 23 24 25 26
element              : 1
exp                  : 9 10 11 14 15 16 17 20 23 27 27 28 28 28 34 35 41 42 53 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 74 75 75 78 79 80
explist              : 77 79 80 81 81
keycall              : 18
keyword              : 45
mat                  : 1 0
matrix               : 16 76
multiclause          : 11 12 21
number               : 44
optargs              : 4 43
optvars              : 30 31 34
range                : 13
stmt                 : 5 6

Parsing method: LALR

state 0

    (0) S' -> . mat
    (1) mat -> . element mat
    (2) mat -> .
    (3) element -> . compoundstmt
    (4) element -> . FUNCTION IDENTIFIER EQUAL IDENTIFIER LPAREN optargs RPAREN compoundstmt END
    (5) compoundstmt -> . stmt SEMICOLON compoundstmt
    (6) compoundstmt -> . stmt compoundstmt
    (7) compoundstmt -> . COMMENT compoundstmt
    (8) compoundstmt -> .
    (9) stmt -> . IF exp compoundstmt END
    (10) stmt -> . IF exp compoundstmt ELSE compoundstmt END
    (11) stmt -> . SWITCH exp multiclause END
    (12) stmt -> . TRY compoundstmt multiclause END
    (13) stmt -> . FOR range compoundstmt END
    (14) stmt -> . WHILE exp compoundstmt END
    (15) stmt -> . IDENTIFIER EQUAL exp
    (16) stmt -> . matrix EQUAL exp
    (17) stmt -> . RETURN exp
    (18) stmt -> . keycall
    (19) stmt -> . IDENTIFIER PERIOD IDENTIFIER
    (20) stmt -> . exp
    (77) matrix -> . LBRACKET explist RBRACKET
    (29) keycall -> . CLC
    (30) keycall -> . CLOSE optvars
    (31) keycall -> . CLEAR optvars
    (32) keycall -> . BREAK
    (33) keycall -> . CONTINUE
    (38) exp -> . IDENTIFIER
    (39) exp -> . STRING
    (40) exp -> . DIRECTORY
    (41) exp -> . exp TRANSPOSE
    (42) exp -> . LPAREN exp RPAREN
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (44) exp -> . number
    (45) exp -> . keyword
    (55) exp -> . exp ELOR exp
    (56) exp -> . exp ELAND exp
    (57) exp -> . exp OROR exp
    (58) exp -> . exp ANDAND exp
    (59) exp -> . exp EQUALEQUAL exp
    (60) exp -> . exp NOTEQUAL exp
    (61) exp -> . exp LT exp
    (62) exp -> . exp GT exp
    (63) exp -> . exp LE exp
    (64) exp -> . exp GE exp
    (65) exp -> . exp MPOWER exp
    (66) exp -> . exp POWER exp
    (67) exp -> . exp MTIMES exp
    (68) exp -> . exp MDIVIDE exp
    (69) exp -> . exp TIMES exp
    (70) exp -> . exp DIVIDE exp
    (71) exp -> . exp BACKSLASH exp
    (72) exp -> . exp PLUS exp
    (73) exp -> . exp MINUS exp
    (74) exp -> . exp COLON exp COLON exp
    (75) exp -> . exp COLON exp
    (76) exp -> . matrix
    (82) exp -> . IDENTIFIER LBRACE args RBRACE
    (36) number -> . INTEGER
    (37) number -> . FLOAT
    (46) keyword -> . ALL
    (47) keyword -> . NOT
    (48) keyword -> . TRUE
    (49) keyword -> . FALSE
    (50) keyword -> . COLON

  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 2 (mat -> .)
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for TRY resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for CLC resolved as shift
  ! shift/reduce conflict for CLOSE resolved as shift
  ! shift/reduce conflict for CLEAR resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for DIRECTORY resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for ALL resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for COLON resolved as shift
    $end            reduce using rule 2 (mat -> .)
    FUNCTION        shift and go to state 4
    COMMENT         shift and go to state 8
    IF              shift and go to state 9
    SWITCH          shift and go to state 11
    TRY             shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    IDENTIFIER      shift and go to state 5
    RETURN          shift and go to state 16
    LBRACKET        shift and go to state 18
    CLC             shift and go to state 19
    CLOSE           shift and go to state 20
    CLEAR           shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    STRING          shift and go to state 24
    DIRECTORY       shift and go to state 25
    LPAREN          shift and go to state 6
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    ALL             shift and go to state 31
    NOT             shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    COLON           shift and go to state 28

  ! FUNCTION        [ reduce using rule 8 (compoundstmt -> .) ]
  ! COMMENT         [ reduce using rule 8 (compoundstmt -> .) ]
  ! IF              [ reduce using rule 8 (compoundstmt -> .) ]
  ! SWITCH          [ reduce using rule 8 (compoundstmt -> .) ]
  ! TRY             [ reduce using rule 8 (compoundstmt -> .) ]
  ! FOR             [ reduce using rule 8 (compoundstmt -> .) ]
  ! WHILE           [ reduce using rule 8 (compoundstmt -> .) ]
  ! IDENTIFIER      [ reduce using rule 8 (compoundstmt -> .) ]
  ! RETURN          [ reduce using rule 8 (compoundstmt -> .) ]
  ! LBRACKET        [ reduce using rule 8 (compoundstmt -> .) ]
  ! CLC             [ reduce using rule 8 (compoundstmt -> .) ]
  ! CLOSE           [ reduce using rule 8 (compoundstmt -> .) ]
  ! CLEAR           [ reduce using rule 8 (compoundstmt -> .) ]
  ! BREAK           [ reduce using rule 8 (compoundstmt -> .) ]
  ! CONTINUE        [ reduce using rule 8 (compoundstmt -> .) ]
  ! STRING          [ reduce using rule 8 (compoundstmt -> .) ]
  ! DIRECTORY       [ reduce using rule 8 (compoundstmt -> .) ]
  ! LPAREN          [ reduce using rule 8 (compoundstmt -> .) ]
  ! INTEGER         [ reduce using rule 8 (compoundstmt -> .) ]
  ! FLOAT           [ reduce using rule 8 (compoundstmt -> .) ]
  ! ALL             [ reduce using rule 8 (compoundstmt -> .) ]
  ! NOT             [ reduce using rule 8 (compoundstmt -> .) ]
  ! TRUE            [ reduce using rule 8 (compoundstmt -> .) ]
  ! FALSE           [ reduce using rule 8 (compoundstmt -> .) ]
  ! COLON           [ reduce using rule 8 (compoundstmt -> .) ]
  ! $end            [ reduce using rule 8 (compoundstmt -> .) ]

    mat                            shift and go to state 1
    element                        shift and go to state 2
    compoundstmt                   shift and go to state 3
    stmt                           shift and go to state 7
    exp                            shift and go to state 10
    matrix                         shift and go to state 15
    keycall                        shift and go to state 17
    number                         shift and go to state 26
    keyword                        shift and go to state 27

state 1

    (0) S' -> mat .



state 2

    (1) mat -> element . mat
    (1) mat -> . element mat
    (2) mat -> .
    (3) element -> . compoundstmt
    (4) element -> . FUNCTION IDENTIFIER EQUAL IDENTIFIER LPAREN optargs RPAREN compoundstmt END
    (5) compoundstmt -> . stmt SEMICOLON compoundstmt
    (6) compoundstmt -> . stmt compoundstmt
    (7) compoundstmt -> . COMMENT compoundstmt
    (8) compoundstmt -> .
    (9) stmt -> . IF exp compoundstmt END
    (10) stmt -> . IF exp compoundstmt ELSE compoundstmt END
    (11) stmt -> . SWITCH exp multiclause END
    (12) stmt -> . TRY compoundstmt multiclause END
    (13) stmt -> . FOR range compoundstmt END
    (14) stmt -> . WHILE exp compoundstmt END
    (15) stmt -> . IDENTIFIER EQUAL exp
    (16) stmt -> . matrix EQUAL exp
    (17) stmt -> . RETURN exp
    (18) stmt -> . keycall
    (19) stmt -> . IDENTIFIER PERIOD IDENTIFIER
    (20) stmt -> . exp
    (77) matrix -> . LBRACKET explist RBRACKET
    (29) keycall -> . CLC
    (30) keycall -> . CLOSE optvars
    (31) keycall -> . CLEAR optvars
    (32) keycall -> . BREAK
    (33) keycall -> . CONTINUE
    (38) exp -> . IDENTIFIER
    (39) exp -> . STRING
    (40) exp -> . DIRECTORY
    (41) exp -> . exp TRANSPOSE
    (42) exp -> . LPAREN exp RPAREN
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (44) exp -> . number
    (45) exp -> . keyword
    (55) exp -> . exp ELOR exp
    (56) exp -> . exp ELAND exp
    (57) exp -> . exp OROR exp
    (58) exp -> . exp ANDAND exp
    (59) exp -> . exp EQUALEQUAL exp
    (60) exp -> . exp NOTEQUAL exp
    (61) exp -> . exp LT exp
    (62) exp -> . exp GT exp
    (63) exp -> . exp LE exp
    (64) exp -> . exp GE exp
    (65) exp -> . exp MPOWER exp
    (66) exp -> . exp POWER exp
    (67) exp -> . exp MTIMES exp
    (68) exp -> . exp MDIVIDE exp
    (69) exp -> . exp TIMES exp
    (70) exp -> . exp DIVIDE exp
    (71) exp -> . exp BACKSLASH exp
    (72) exp -> . exp PLUS exp
    (73) exp -> . exp MINUS exp
    (74) exp -> . exp COLON exp COLON exp
    (75) exp -> . exp COLON exp
    (76) exp -> . matrix
    (82) exp -> . IDENTIFIER LBRACE args RBRACE
    (36) number -> . INTEGER
    (37) number -> . FLOAT
    (46) keyword -> . ALL
    (47) keyword -> . NOT
    (48) keyword -> . TRUE
    (49) keyword -> . FALSE
    (50) keyword -> . COLON

  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 2 (mat -> .)
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for TRY resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for CLC resolved as shift
  ! shift/reduce conflict for CLOSE resolved as shift
  ! shift/reduce conflict for CLEAR resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for DIRECTORY resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for ALL resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for COLON resolved as shift
    $end            reduce using rule 2 (mat -> .)
    FUNCTION        shift and go to state 4
    COMMENT         shift and go to state 8
    IF              shift and go to state 9
    SWITCH          shift and go to state 11
    TRY             shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    IDENTIFIER      shift and go to state 5
    RETURN          shift and go to state 16
    LBRACKET        shift and go to state 18
    CLC             shift and go to state 19
    CLOSE           shift and go to state 20
    CLEAR           shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    STRING          shift and go to state 24
    DIRECTORY       shift and go to state 25
    LPAREN          shift and go to state 6
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    ALL             shift and go to state 31
    NOT             shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    COLON           shift and go to state 28

  ! FUNCTION        [ reduce using rule 8 (compoundstmt -> .) ]
  ! COMMENT         [ reduce using rule 8 (compoundstmt -> .) ]
  ! IF              [ reduce using rule 8 (compoundstmt -> .) ]
  ! SWITCH          [ reduce using rule 8 (compoundstmt -> .) ]
  ! TRY             [ reduce using rule 8 (compoundstmt -> .) ]
  ! FOR             [ reduce using rule 8 (compoundstmt -> .) ]
  ! WHILE           [ reduce using rule 8 (compoundstmt -> .) ]
  ! IDENTIFIER      [ reduce using rule 8 (compoundstmt -> .) ]
  ! RETURN          [ reduce using rule 8 (compoundstmt -> .) ]
  ! LBRACKET        [ reduce using rule 8 (compoundstmt -> .) ]
  ! CLC             [ reduce using rule 8 (compoundstmt -> .) ]
  ! CLOSE           [ reduce using rule 8 (compoundstmt -> .) ]
  ! CLEAR           [ reduce using rule 8 (compoundstmt -> .) ]
  ! BREAK           [ reduce using rule 8 (compoundstmt -> .) ]
  ! CONTINUE        [ reduce using rule 8 (compoundstmt -> .) ]
  ! STRING          [ reduce using rule 8 (compoundstmt -> .) ]
  ! DIRECTORY       [ reduce using rule 8 (compoundstmt -> .) ]
  ! LPAREN          [ reduce using rule 8 (compoundstmt -> .) ]
  ! INTEGER         [ reduce using rule 8 (compoundstmt -> .) ]
  ! FLOAT           [ reduce using rule 8 (compoundstmt -> .) ]
  ! ALL             [ reduce using rule 8 (compoundstmt -> .) ]
  ! NOT             [ reduce using rule 8 (compoundstmt -> .) ]
  ! TRUE            [ reduce using rule 8 (compoundstmt -> .) ]
  ! FALSE           [ reduce using rule 8 (compoundstmt -> .) ]
  ! COLON           [ reduce using rule 8 (compoundstmt -> .) ]
  ! $end            [ reduce using rule 8 (compoundstmt -> .) ]

    element                        shift and go to state 2
    mat                            shift and go to state 35
    compoundstmt                   shift and go to state 3
    stmt                           shift and go to state 7
    exp                            shift and go to state 10
    matrix                         shift and go to state 15
    keycall                        shift and go to state 17
    number                         shift and go to state 26
    keyword                        shift and go to state 27

state 3

    (3) element -> compoundstmt .

    FUNCTION        reduce using rule 3 (element -> compoundstmt .)
    COMMENT         reduce using rule 3 (element -> compoundstmt .)
    IF              reduce using rule 3 (element -> compoundstmt .)
    SWITCH          reduce using rule 3 (element -> compoundstmt .)
    TRY             reduce using rule 3 (element -> compoundstmt .)
    FOR             reduce using rule 3 (element -> compoundstmt .)
    WHILE           reduce using rule 3 (element -> compoundstmt .)
    IDENTIFIER      reduce using rule 3 (element -> compoundstmt .)
    RETURN          reduce using rule 3 (element -> compoundstmt .)
    LBRACKET        reduce using rule 3 (element -> compoundstmt .)
    CLC             reduce using rule 3 (element -> compoundstmt .)
    CLOSE           reduce using rule 3 (element -> compoundstmt .)
    CLEAR           reduce using rule 3 (element -> compoundstmt .)
    BREAK           reduce using rule 3 (element -> compoundstmt .)
    CONTINUE        reduce using rule 3 (element -> compoundstmt .)
    STRING          reduce using rule 3 (element -> compoundstmt .)
    DIRECTORY       reduce using rule 3 (element -> compoundstmt .)
    LPAREN          reduce using rule 3 (element -> compoundstmt .)
    INTEGER         reduce using rule 3 (element -> compoundstmt .)
    FLOAT           reduce using rule 3 (element -> compoundstmt .)
    ALL             reduce using rule 3 (element -> compoundstmt .)
    NOT             reduce using rule 3 (element -> compoundstmt .)
    TRUE            reduce using rule 3 (element -> compoundstmt .)
    FALSE           reduce using rule 3 (element -> compoundstmt .)
    COLON           reduce using rule 3 (element -> compoundstmt .)
    $end            reduce using rule 3 (element -> compoundstmt .)


state 4

    (4) element -> FUNCTION . IDENTIFIER EQUAL IDENTIFIER LPAREN optargs RPAREN compoundstmt END

    IDENTIFIER      shift and go to state 36


state 5

    (15) stmt -> IDENTIFIER . EQUAL exp
    (19) stmt -> IDENTIFIER . PERIOD IDENTIFIER
    (38) exp -> IDENTIFIER .
    (43) exp -> IDENTIFIER . LPAREN optargs RPAREN
    (82) exp -> IDENTIFIER . LBRACE args RBRACE

  ! shift/reduce conflict for LPAREN resolved as shift
    EQUAL           shift and go to state 37
    PERIOD          shift and go to state 38
    TRANSPOSE       reduce using rule 38 (exp -> IDENTIFIER .)
    ELOR            reduce using rule 38 (exp -> IDENTIFIER .)
    ELAND           reduce using rule 38 (exp -> IDENTIFIER .)
    OROR            reduce using rule 38 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 38 (exp -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 38 (exp -> IDENTIFIER .)
    NOTEQUAL        reduce using rule 38 (exp -> IDENTIFIER .)
    LT              reduce using rule 38 (exp -> IDENTIFIER .)
    GT              reduce using rule 38 (exp -> IDENTIFIER .)
    LE              reduce using rule 38 (exp -> IDENTIFIER .)
    GE              reduce using rule 38 (exp -> IDENTIFIER .)
    MPOWER          reduce using rule 38 (exp -> IDENTIFIER .)
    POWER           reduce using rule 38 (exp -> IDENTIFIER .)
    MTIMES          reduce using rule 38 (exp -> IDENTIFIER .)
    MDIVIDE         reduce using rule 38 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 38 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 38 (exp -> IDENTIFIER .)
    BACKSLASH       reduce using rule 38 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 38 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 38 (exp -> IDENTIFIER .)
    COLON           reduce using rule 38 (exp -> IDENTIFIER .)
    SEMICOLON       reduce using rule 38 (exp -> IDENTIFIER .)
    COMMENT         reduce using rule 38 (exp -> IDENTIFIER .)
    IF              reduce using rule 38 (exp -> IDENTIFIER .)
    SWITCH          reduce using rule 38 (exp -> IDENTIFIER .)
    TRY             reduce using rule 38 (exp -> IDENTIFIER .)
    FOR             reduce using rule 38 (exp -> IDENTIFIER .)
    WHILE           reduce using rule 38 (exp -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 38 (exp -> IDENTIFIER .)
    RETURN          reduce using rule 38 (exp -> IDENTIFIER .)
    LBRACKET        reduce using rule 38 (exp -> IDENTIFIER .)
    CLC             reduce using rule 38 (exp -> IDENTIFIER .)
    CLOSE           reduce using rule 38 (exp -> IDENTIFIER .)
    CLEAR           reduce using rule 38 (exp -> IDENTIFIER .)
    BREAK           reduce using rule 38 (exp -> IDENTIFIER .)
    CONTINUE        reduce using rule 38 (exp -> IDENTIFIER .)
    STRING          reduce using rule 38 (exp -> IDENTIFIER .)
    DIRECTORY       reduce using rule 38 (exp -> IDENTIFIER .)
    INTEGER         reduce using rule 38 (exp -> IDENTIFIER .)
    FLOAT           reduce using rule 38 (exp -> IDENTIFIER .)
    ALL             reduce using rule 38 (exp -> IDENTIFIER .)
    NOT             reduce using rule 38 (exp -> IDENTIFIER .)
    TRUE            reduce using rule 38 (exp -> IDENTIFIER .)
    FALSE           reduce using rule 38 (exp -> IDENTIFIER .)
    FUNCTION        reduce using rule 38 (exp -> IDENTIFIER .)
    $end            reduce using rule 38 (exp -> IDENTIFIER .)
    CASE            reduce using rule 38 (exp -> IDENTIFIER .)
    OTHERWISE       reduce using rule 38 (exp -> IDENTIFIER .)
    CATCH           reduce using rule 38 (exp -> IDENTIFIER .)
    END             reduce using rule 38 (exp -> IDENTIFIER .)
    ELSE            reduce using rule 38 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 39
    LBRACE          shift and go to state 40

  ! LPAREN          [ reduce using rule 38 (exp -> IDENTIFIER .) ]


state 6

    (42) exp -> LPAREN . exp RPAREN
    (38) exp -> . IDENTIFIER
    (39) exp -> . STRING
    (40) exp -> . DIRECTORY
    (41) exp -> . exp TRANSPOSE
    (42) exp -> . LPAREN exp RPAREN
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (44) exp -> . number
    (45) exp -> . keyword
    (55) exp -> . exp ELOR exp
    (56) exp -> . exp ELAND exp
    (57) exp -> . exp OROR exp
    (58) exp -> . exp ANDAND exp
    (59) exp -> . exp EQUALEQUAL exp
    (60) exp -> . exp NOTEQUAL exp
    (61) exp -> . exp LT exp
    (62) exp -> . exp GT exp
    (63) exp -> . exp LE exp
    (64) exp -> . exp GE exp
    (65) exp -> . exp MPOWER exp
    (66) exp -> . exp POWER exp
    (67) exp -> . exp MTIMES exp
    (68) exp -> . exp MDIVIDE exp
    (69) exp -> . exp TIMES exp
    (70) exp -> . exp DIVIDE exp
    (71) exp -> . exp BACKSLASH exp
    (72) exp -> . exp PLUS exp
    (73) exp -> . exp MINUS exp
    (74) exp -> . exp COLON exp COLON exp
    (75) exp -> . exp COLON exp
    (76) exp -> . matrix
    (82) exp -> . IDENTIFIER LBRACE args RBRACE
    (36) number -> . INTEGER
    (37) number -> . FLOAT
    (46) keyword -> . ALL
    (47) keyword -> . NOT
    (48) keyword -> . TRUE
    (49) keyword -> . FALSE
    (50) keyword -> . COLON
    (77) matrix -> . LBRACKET explist RBRACKET

    IDENTIFIER      shift and go to state 42
    STRING          shift and go to state 24
    DIRECTORY       shift and go to state 25
    LPAREN          shift and go to state 6
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    ALL             shift and go to state 31
    NOT             shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    COLON           shift and go to state 28
    LBRACKET        shift and go to state 18

    exp                            shift and go to state 41
    number                         shift and go to state 26
    keyword                        shift and go to state 27
    matrix                         shift and go to state 43

state 7

    (5) compoundstmt -> stmt . SEMICOLON compoundstmt
    (6) compoundstmt -> stmt . compoundstmt
    (5) compoundstmt -> . stmt SEMICOLON compoundstmt
    (6) compoundstmt -> . stmt compoundstmt
    (7) compoundstmt -> . COMMENT compoundstmt
    (8) compoundstmt -> .
    (9) stmt -> . IF exp compoundstmt END
    (10) stmt -> . IF exp compoundstmt ELSE compoundstmt END
    (11) stmt -> . SWITCH exp multiclause END
    (12) stmt -> . TRY compoundstmt multiclause END
    (13) stmt -> . FOR range compoundstmt END
    (14) stmt -> . WHILE exp compoundstmt END
    (15) stmt -> . IDENTIFIER EQUAL exp
    (16) stmt -> . matrix EQUAL exp
    (17) stmt -> . RETURN exp
    (18) stmt -> . keycall
    (19) stmt -> . IDENTIFIER PERIOD IDENTIFIER
    (20) stmt -> . exp
    (77) matrix -> . LBRACKET explist RBRACKET
    (29) keycall -> . CLC
    (30) keycall -> . CLOSE optvars
    (31) keycall -> . CLEAR optvars
    (32) keycall -> . BREAK
    (33) keycall -> . CONTINUE
    (38) exp -> . IDENTIFIER
    (39) exp -> . STRING
    (40) exp -> . DIRECTORY
    (41) exp -> . exp TRANSPOSE
    (42) exp -> . LPAREN exp RPAREN
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (44) exp -> . number
    (45) exp -> . keyword
    (55) exp -> . exp ELOR exp
    (56) exp -> . exp ELAND exp
    (57) exp -> . exp OROR exp
    (58) exp -> . exp ANDAND exp
    (59) exp -> . exp EQUALEQUAL exp
    (60) exp -> . exp NOTEQUAL exp
    (61) exp -> . exp LT exp
    (62) exp -> . exp GT exp
    (63) exp -> . exp LE exp
    (64) exp -> . exp GE exp
    (65) exp -> . exp MPOWER exp
    (66) exp -> . exp POWER exp
    (67) exp -> . exp MTIMES exp
    (68) exp -> . exp MDIVIDE exp
    (69) exp -> . exp TIMES exp
    (70) exp -> . exp DIVIDE exp
    (71) exp -> . exp BACKSLASH exp
    (72) exp -> . exp PLUS exp
    (73) exp -> . exp MINUS exp
    (74) exp -> . exp COLON exp COLON exp
    (75) exp -> . exp COLON exp
    (76) exp -> . matrix
    (82) exp -> . IDENTIFIER LBRACE args RBRACE
    (36) number -> . INTEGER
    (37) number -> . FLOAT
    (46) keyword -> . ALL
    (47) keyword -> . NOT
    (48) keyword -> . TRUE
    (49) keyword -> . FALSE
    (50) keyword -> . COLON
